--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <div class="menu-wrap">
             <ul class="depth2 menu1">
               <li><a href="https://gla9940.github.io/company_intro/">회사소개</a></li>
-              <li><a href="https://gla9940.github.io/company_overview/">회사개요</a></li>
+              <li style="background-color: rgba(0, 0, 0, 0.6);"><a href="https://gla9940.github.io/company_overview/">회사개요</a></li>
               <li><a href="https://gla9940.github.io/company_vision/">기술비전</a></li>
               <li><a href="https://gla9940.github.io/company_value/">핵심가치</a></li>
             </ul>
